# coffee_room_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  loki-config.yml  messages.yaml  promtail-config.yml  pyproject.toml
.github/workflows/: ci.yml
bot/: main.py
bot/application/: analyze_service.py  blackjack_service.py  chatmode_service.py  cleanup_service.py  daily_leaderboard_service.py  dice_service.py  giveaway_service.py  history_service.py  leaderboard_service.py  mute_service.py  provider.py  score_service.py  slots_custom_functions.py  slots_service.py  xp_service.py
bot/domain/: entities.py  giveaway_entities.py  pluralizer.py  reaction_registry.py  tz.py  wordgame_entities.py
bot/infrastructure/: anagram_loop.py  bj_cleanup_loop.py  bootstrap.py  chatmode_loop.py  cleanup_loop.py  config_loader.py  daily_leaderboard_loop.py  daily_summary_loop.py  di.py  dice_loop.py  duel_cleanup_loop.py  giveaway_loop.py  llm_provider.py  logger.py  lot_loop.py  message_formatter.py  mute_roulette_loop.py  news_fetcher.py  openai_client.py  page_fetcher.py  redis_store.py  telegram_log_handler.py  unmute_loop.py  word_loader.py  wordgame_loop.py
configs/: config.yaml  help.yaml  messages.yaml
docs/: commands.md
migrations/: V001__initial_schema.sql  V002__active_mutes.sql  V003__saved_permissions.sql  V005__giveaway.sql  V009__ttt_wins.sql  V010__message_text.sql  V011__daily_leaderboard.sql  V012__users_is_bot.sql  V013__chatmode.sql  V014__mute_history.sql  V015__xp.sql
scripts/: deploy.sh
(+120 files in other folders)
